--- a/readme
+++ b/readme
@@ -1,4 +1,5 @@
-readme
-начнем описывать требования
-добавим папку
-удалим папку
+# readme
+1. начнем описывать требования
+2. добавим папку
+3. удалим папку
+
